<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:background="@layout/backrepeat">
	
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="vertical" 
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:padding="18dp">
		<TextView android:id="@+id/credit"
		    android:text="@string/credit"
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content" 
		    android:textColor="#2caeca" 
		    android:textSize="12pt"
		    android:paddingBottom="5dp"/>	
		<LinearLayout
		    android:orientation="horizontal" 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content">
		    <TextView android:id="@+id/writtertext"
		        android:text="@string/writter_text"
		        android:textColor="#ffffff" 
			    android:textSize="4pt"
			    android:layout_width="wrap_content" 
			    android:layout_height="wrap_content"/>
		    <TextView android:id="@+id/writter"
		        android:textColor="#ffffff" 
			    android:textSize="4pt"
			    android:layout_width="wrap_content" 
			    android:layout_height="wrap_content"/>		
		</LinearLayout>
		<LinearLayout
		    android:orientation="horizontal" 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingBottom="10dp">
		    <TextView android:id="@+id/artisttext"
		        android:text="@string/artist_text"
		        android:textColor="#ffffff" 
			    android:textSize="4pt"
			    android:layout_width="wrap_content" 
			    android:layout_height="wrap_content"/>
		    <TextView android:id="@+id/artist"
		        android:textColor="#ffffff" 
			    android:textSize="4pt"
			    android:layout_width="wrap_content" 
			    android:layout_height="wrap_content"/>		
		</LinearLayout>
		<TextView android:id="@+id/storytext"
		    android:text="@string/story"
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content" 
		    android:textColor="#2caeca" 
		    android:textSize="12pt"
		    android:paddingBottom="5dp"/>
	    <TextView android:id="@+id/story"
	        android:textColor="#ffffff" 
		    android:textSize="4pt"
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content"/>	
	</LinearLayout>
</ScrollView>