<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" 
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:background="@drawable/bg_page">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="35dp">
        <LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"		           
            android:layout_weight="1"
			android:gravity="center"
            android:background="@drawable/top_tab_bg">
            <ImageView 
                android:src="@drawable/makko_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <ImageView 
            android:src="@drawable/top_tab_separator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>		        
		<Button
		    android:id="@+id/collection_button"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/comic_collection"
            android:textSize="11dp"
            android:textColor="#ffffff"
            android:background="@drawable/top_tab_bg"/>
		<ImageView 
            android:src="@drawable/top_tab_separator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/favorite_button"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/comic_favorite"
            android:textSize="11dp"
            android:textColor="#ffffff"
            android:background="@drawable/top_tab_bg"/>
    </LinearLayout>			    
    <LinearLayout 
        android:layout_width="fill_parent"
		android:layout_height="100dp"
		android:gravity="center">
        
        <ImageView 
			android:src="@drawable/selectpage"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"/>
        <TextView 
            android:id="@+id/pagetext"
            android:text="@string/page_text"
            android:textSize="15pt"
            android:textStyle="bold"
            android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingLeft="13dp"
			android:shadowColor="#AACCCCCC" android:shadowDx="1.5"
        	android:shadowDy="1.5" android:shadowRadius="1.5"/>
    </LinearLayout>
    <LinearLayout 
        android:layout_width="fill_parent" 
		android:layout_height="fill_parent" 
		android:layout_margin="8dp"
		android:padding="7dp"
		android:background="@drawable/bg_radius_page">
        <GridView xmlns:android="http://schemas.android.com/apk/res/android" 
		    android:id="@+id/gridview"
		    android:layout_width="fill_parent" 
		    android:layout_height="fill_parent"
		    android:columnWidth="80dp"
		    android:numColumns="auto_fit"
		    android:verticalSpacing="10dp"
		    android:horizontalSpacing="5dp"
		    android:stretchMode="columnWidth"
		    android:scrollbars="none"
		    android:gravity="center" />
    </LinearLayout>
</LinearLayout>